# mount-install-templates

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  Makefile  README.md  c3_mount.stl  c3x_mount.stl  debug_mount.scad  debug_view.scad  four_mount.stl  main.py  pyproject.toml  template.typ  visualize.sh
.github/workflows/: deploy.yml
tools/: benchmark_build.py  build_mega_templates.py  cutting_template.scad  grayscale.py  orient_stl.py  project_mount.scad  project_mount_hull.scad  verify_build.py
tools/vehicle_specific/: annotate_scan.py  generate_offsets.py  process_annotation.py  refine_trace.py
vehicles/2020_corolla/: name.txt  template.typ
vehicles/2020_hyundai_santa_fe/: name.txt  template.typ
