[project]
name = "c-install-templates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
    "trimesh>=4.11.1",
    "opencv-python-headless>=4.11.0.86",
]
